Fix post layout on smaller resolutions
Previously it could render nastily in low resolutions and mess up the
core layout. Better center using margin and subtract the correct value.

--- a/scss/components/_post.scss
+++ b/scss/components/_post.scss
@@ -9,6 +9,8 @@
     }
 }
 .post__content {
+    margin: 0 auto;
+
     h1,
     h2,
     h3,
@@ -20,7 +22,7 @@
     ul,
     pre {
         width: $max-width - $base-spacing-unit * 2; // subtract .post padding
-        max-width: calc(100vw - #{$base-spacing-unit});
+        max-width: calc(100vw - #{$base-spacing-unit * 2});
     }
 
     img {
